Fixed shadow on inputs on mobile-safari

--- a/apps/keepamovie/src/styles.css
+++ b/apps/keepamovie/src/styles.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+input {
+  -webkit-appearance: none;
+}
